--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Tony-Coniglio.github.io/React-Portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -10,12 +11,15 @@
     "bootstrap": "^5.2.3",
     "bulma": "^0.9.4",
     "dotenv": "^16.0.3",
+    "gh-pages": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
